feat: configure for prod (e.g domain name, mailgun etc) and add delete question functionality also improve UX by adding sweet alert fix: fixed a hard coded src image in an img element in explanation.html

--- a/locale/en_US/LC_MESSAGES/django.po
+++ b/locale/en_US/LC_MESSAGES/django.po
@@ -1,6 +1,6 @@
 # Translations for the Math Quizzty project
 # Copyright (C) 2025 Jericho serrano
-# Jericho serrano <jericho-serrano@example.com>, 2025.
+# Jericho serrano <jericho-serrano@mathquizzty.xyz>, 2025.
 #
 #, fuzzy
 msgid ""
